--- a/.settings/com.st.stm32cube.ide.mcu.sfrview.prefs
+++ b/.settings/com.st.stm32cube.ide.mcu.sfrview.prefs
@@ -1,2 +1,2 @@
 eclipse.preferences.version=1
-sfrviewstate={"fFavorites"\:{"fLists"\:{}},"fProperties"\:{"fNodeProperties"\:{}}}
+sfrviewstate={"fFavorites"\:{"fLists"\:{}},"fProperties"\:{"fNodeProperties"\:{"Cortex_M33/SCB/CFSR_S"\:{"fNodeProperties"\:{"autoupdate"\:"true"}}}}}
